[project]
name = "new-dccm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.19.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyside6>=6.10.2",
    "tabulate>=0.9.0",
]
